# dpe_etiquette_prediction

./: .gitignore  README.md  docker-compose.yml  makefile  mlflow.db  pyproject.toml
.github/workflows/: cd.yml  ci.yml
dags/: predictions_dag.py  retrain_dag.py
docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.frontend  Dockerfile.train
frontend/: app.py
frontend/pages_content/: home.py  metrics.py  predict.py
mlruns/1/15b017df15064e48930417ea1c749318/artifacts/: classification_report.txt
mlruns/1/33a970216f604024a0e7d9372bff8c4d/artifacts/: classification_report.json
mlruns/1/83a4a38dcc2e449588dceb225fc95172/artifacts/: classification_report.txt
mlruns/1/c22d1b36a6f144b7a39c16273fe09fae/artifacts/: classification_report.json  classification_report.txt
mlruns/1/c83246b1a7fc49de9e0a081347f4aa0a/artifacts/: estimator.html
mlruns/1/c9a3b25823214fb8abb1eddf46bb50e9/artifacts/: classification_report.json  classification_report.txt
mlruns/1/dae4a67963f64321830ed904b8d8296d/artifacts/: classification_report.json
mlruns/1/db800589b02443c69da7bc4ceb3ffe8c/artifacts/: classification_report.json  classification_report.txt
mlruns/1/dc3a4af67d244b73b377fc731583689d/artifacts/: classification_report.json  classification_report.txt
mlruns/1/models/m-2a0c20ffaae34c8a8f10cf1411fb1540/artifacts/: MLmodel
mlruns/1/models/m-54d9a09218e64de5a690aa5ba1ef8929/artifacts/: MLmodel
mlruns/1/models/m-55abaaa8d17c4e2a913b7b359d2e7d0b/artifacts/: MLmodel
mlruns/1/models/m-6cb22ab95d264fbea4b3cf580abc39be/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-6d17742d62cb4aa4845e91c9f4be2d94/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-701a6390aa004613a390a13d21ebad4f/artifacts/: MLmodel  model.pkl  serving_input_example.json
mlruns/1/models/m-723708ce2fb340168c5354b7c1fcd83a/artifacts/: MLmodel
mlruns/1/models/m-7d77e83b2ae1428babe051ad3b4a3b94/artifacts/: MLmodel  model.pkl  requirements.txt
mlruns/1/models/m-b40be0eb135d4c389086cf5b42f43ef5/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-ccda9454ae7341c48327aa3a7cda5aa2/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-dcb9c7a58c9343d8a84f9543889feda8/artifacts/: MLmodel
mlruns/1/models/m-e88781d441e840b1bbd86d160108f4db/artifacts/: MLmodel  (+1 more)
models/: model.joblib
src/: api.py  config.py  data.py  evaluate.py  evaluation.py  export_silver.py  feature.py  predict_client.py  train.py  train_models.py  train_optuna.py
(+1 files in other folders)
