[project]
name = "dpe-etiquette-prediction"
version = "0.1.0"
description = "Prédiction des passoires thermiques DPE — Classification binaire MLOps"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=18.0.0",

    # ML
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "optuna>=3.6.0",
    "shap>=0.45.0",

    # Tracking & Registry
    "mlflow>=2.14.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",

    # Frontend
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "great-expectations>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlproject"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]