[project]
name = "dpe-etiquette-prediction"
version = "0.1.0"
description = "Prédiction des passoires thermiques DPE — Classification binaire MLOps"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=18.0.0",

    # ML
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "optuna>=3.6.0",
    "shap>=0.47.0",
    "numba>=0.59.0",
    "llvmlite>=0.42.0",

    # Tracking
    "mlflow>=2.14.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",

    # Frontend
    "streamlit>=1.35.0",
    "httpx>=0.27.0",
    "plotly>=5.22.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "mypy>=1.16.0",
    "pandas-stubs>=2.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "great-expectations>=1.0.0",
    "ipykernel>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]